# Riemann-s-toolbox

./: .deepsource.toml  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
bot/: __init__.py  __main__.py  config.py
bot/core/: autoload.py  bot.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  index.rst  intro.rst  quickstart.rst
docs/source/_static/: codeblocks.css  copy.js  custom.js  icons.css  scorer.js  settings.js  sidebar.js  style.css
docs/source/_templates/: genindex.html  layout.html  relations.html
docs/source/ext/: database.rst  logging.rst
docs/source/extensions/: attributetable.py  builder.py  details.py  exception_hierarchy.py  nitpick_file_ignorer.py  resourcelinks.py
riemann/: __init__.py  bot.py  commandtree.py  constants.py  database.py  logging.py  utils.py
riemann/data/: defaults.toml
