[tool.poetry]
name = "zeta-template"
version = "0.1.0"
description = "Template for the zeta series of bots."
authors = ["janaSunrise <warriordefenderz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
