[tool.poetry]
name = "zeta-template"
version = "0.1.0"
description = "Template for the zeta series of bots."
authors = ["janaSunrise <warriordefenderz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
taskipy = "^1.10.1"
python-decouple = "^3.6"
aiohttp = "^3.7.4post0"
loguru = "^0.6.0"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-bugbear = "^22.1.11"
flake8-tidy-imports = "^4.6.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"
pyright = "^1.1.227"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = [".venv", ".git", ".cache"]

[tool.black]
line-length = 88

[tool.taskipy.tasks]
precommit = "pre-commit install"
lint = "pre-commit run --all-files"
start = "python -m bot"
