# Package configuration
[metadata]
name = riemann
author = Zeta labs
# TODO: add a description
description = Riemann package
url = https://github.com/Faholan/Riemann-s-toolbox
project_urls =
    Documentation = https://riemann.readthedocs.io/en/latest/
    Issue tracker = https://github.com/Zeta-Labs-HQ/Riemann-s-toolbox/issues
keywords = discord, bot
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed


[options]
# TODO: check if project is zip-safe
zip_safe = False
packages =
    riemann
install_requires =
    discord.py[speed]
    psycopg[binary, pool]>=3.0
    toml>=0.10.0
include_package_data = True
python_requires = >= 3.8


[options.extras_require]
# TODO : select a sphinx version
docs =
    sphinx==4.4.0
    sphinxcontrib_trio==1.1.2
voice =
    discord.py[voice]>=2.0


# Linter configuration
[flake8]
extend-ignore = E203, W503
max-line-length = 88


[pycodestyle]
ignore = E203, W503
max-line-length = 88


[prospector]
ignore = W503
max-line-length = 88


[pylint]
max-line-length = 88


[pylint.messages_control]
disable = C0330, C0326
