# Package configuration
[metadata]
name = riemann
author = Zeta labs
# TODO: add a description
description = Riemann package
url = https://github.com/Zeta-Labs-HQ/Riemann-s-toolbox
project_urls =
    Documentation = https://riemann.readthedocs.io/en/latest/
    Issue tracker = https://github.com/Zeta-Labs-HQ/Riemann-s-toolbox/issues
keywords = discord, bot
license = MIT
license_files =
    LICENSE
    riemann/data/cats/LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed


[options]
# TODO: check if project is zip-safe
zip_safe = False
packages =
    riemann
install_requires =
    discord.py>=2
    psycopg[binary, pool]>=3.0
    toml>=0.10.0
    aiohttp>=3.7.4
# discord.py[speed]>=2.0
include_package_data = True
python_requires = >=3.8
dependency_links = git+https://github.com/Rapptz/discord.py


# Linter configuration
[flake8]
extend-ignore = E203, W503
max-line-length = 88


[pycodestyle]
ignore = E203, W503
max-line-length = 88


[prospector]
ignore = W503
max-line-length = 88


[pylint]
max-line-length = 88


[pylint.messages_control]
disable = C0330, C0326
